--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -57,6 +57,12 @@
       background-position: center center;
     }
 
+    @media screen and(max-width: 768px) {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+    }
+
     @media screen and(min-width: 768px) {
       flex-basis: calc(100% / 2 - 30px);
       margin-left: 30px;
