--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -2,7 +2,9 @@
   margin-bottom: 50px;
 }
 .filters-list {
-  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 
   & .button {
     box-sizing: inline-box;
@@ -22,14 +24,21 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 0;
-  }
 
-  & .button:hover,
-  & .button:focus {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
-    color: $white-color;
-    background-color: $accent-color;
-    outline-color: $accent-color;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 15px;
+    }
+    @media screen and (min-width: 768px) {
+      justify-content: center;
+    }
+
+    &:hover,
+    &:focus {
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+      color: $white-color;
+      background-color: $accent-color;
+      outline-color: $accent-color;
+    }
   }
 }
