--- a/sass/layouts/_examples.scss
+++ b/sass/layouts/_examples.scss
@@ -1,12 +1,22 @@
 .examples.list {
-  margin-left: -30px;
-  margin-top: -30px;
+  @media screen and (mix-width: 768px) {
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 }
+
 .examples-item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-left: 30px;
-  margin-top: 30px;
   background: $white-color;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
+  }
 }
 
 .examples-item .border {
