--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,3 +19,5 @@
 @import "./layouts/team";
 @import "./layouts/clients";
 @import "./layouts/footer";
+@import "./layouts/portfolio";
+@import "./layouts/examples";
