--- a/css/main.css
+++ b/css/main.css
@@ -1187,7 +1187,11 @@ address {
   padding-bottom: 94px;
 }
 
-@media screen and (mix-width: 768px) {
+.examples.list {
+  margin: 0;
+}
+
+@media screen and (min-width: 768px) {
   .examples.list {
     margin-left: -30px;
     margin-top: -30px;
