--- a/sass/layouts/_examples.scss
+++ b/sass/layouts/_examples.scss
@@ -1,5 +1,7 @@
 .examples.list {
-  @media screen and (mix-width: 768px) {
+  margin: 0;
+
+  @media screen and (min-width: 768px) {
     margin-left: -30px;
     margin-top: -30px;
   }
