--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -6,7 +6,12 @@
   padding-left: 15px;
   padding-right: 15px;
   margin: 0;
-  width: 480px;
+  width: 100%;
+
+  @media screen and (min-width: 768px) {
+    position: static;
+    padding: 0;
+  }
 
   .btn {
     display: flex;
@@ -33,6 +38,15 @@
   }
 
   .burger {
-    fill: sandybrown;
+    fill: $title-text-color;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-delay: 0;
+
+    &:hover,
+    &:focus {
+      fill: $accent-color;
+    }
   }
 }
