--- a/sass/layouts/_examples.scss
+++ b/sass/layouts/_examples.scss
@@ -9,6 +9,9 @@
 
 .examples-item {
   background: $white-color;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+  }
 
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
