--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
 @import "./base/general";
 
 @import "./components/_logo";
-@import "./components/_mobile-menu";
+@import "./components/mobile-menu";
 @import "./components/menu";
 @import "./components/contacts";
 @import "./components/button";
