--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 @import "./components/_logo";
 @import "./components/mobile-menu";
 @import "./components/menu";
-@import "./components/contacts";
+@import "./components/_contacts.scss";
 @import "./components/button";
 @import "./components/modal";
 @import "./components/contacts-form";
