--- a/css/main.css
+++ b/css/main.css
@@ -105,16 +105,23 @@ address {
   margin-bottom: 0;
   font-family: "Raleway", "Oleo Script", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.268;
+  font-size: 24px;
+  line-height: 1.17;
   color: #000000;
 }
 
-.logo:focus {
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.268;
+  }
+}
+
+.logo .logo:focus {
   outline-color: #2196f3;
 }
 
-.logo-blue {
+.logo .logo-blue {
   color: #2196f3;
 }
 
@@ -131,9 +138,21 @@ address {
 
 @media screen and (min-width: 768px) {
   .mobile-menu {
-    display: inline-flex;
     position: static;
+    display: flex;
+    justify-content: flex-start;
     padding: 0;
+    max-width: 134px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .mobile-menu {
+    position: static;
+    display: flex;
+    justify-content: flex-start;
+    padding: 0;
+    max-width: 145px;
   }
 }
 
@@ -159,6 +178,7 @@ address {
 
 @media screen and (min-width: 768px) {
   .mobile-menu .btn {
+    position: absolute;
     display: none;
   }
 }
@@ -175,20 +195,10 @@ address {
   fill: #2196f3;
 }
 
-@media screen and (min-width: 768px) {
-  .navigation {
-    display: flex;
-  }
-}
-
 .site-nav {
   display: flex;
   flex-direction: column;
   align-self: center;
-}
-
-.site-nav .item:not(:last-child) {
-  margin-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
@@ -197,13 +207,26 @@ address {
   }
 }
 
-.site-nav .link {
+.site-nav .item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav .item:not(:last-child) {
+    margin: 0;
+  }
+  .site-nav .item:not(:last-child):not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+.link {
   display: inline-block;
   position: relative;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 500;
   font-style: normal;
-  line-height: 1.143;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: #212121;
   transition-property: color;
@@ -212,7 +235,14 @@ address {
   transition-delay: 0;
 }
 
-.site-nav .link::after {
+@media screen and (min-width: 768px) {
+  .link {
+    font-size: 14px;
+    line-height: 1.143;
+  }
+}
+
+.link::after {
   content: "";
   display: none;
   position: absolute;
@@ -224,18 +254,31 @@ address {
   border-radius: 2px;
 }
 
-.site-nav .link:hover::after, .site-nav .link:focus::after, .site-nav .link.current::after {
+@media screen and (min-width: 768px) {
+  .link::after {
+    margin-top: 31px;
+    transform: translateY(-100%);
+  }
+}
+
+.link:hover::after, .link:focus::after, .link.current::after {
   display: flex;
   align-items: baseline;
 }
 
-.site-nav .link:hover, .site-nav .link:focus {
+.link:hover, .link:focus {
   color: #2196f3;
   outline-color: #2196f3;
 }
 
-.site-nav .link.current {
+.link.current {
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .contacts {
+    margin-left: 84px;
+  }
 }
 
 .contacts-list {
@@ -246,12 +289,31 @@ address {
   margin-bottom: 16px;
 }
 
+@media screen and (min-width: 768px) {
+  .contacts-list {
+    margin-top: 0;
+  }
+  .contacts-list .item:nth-child(1) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .contacts-list {
+    display: flex;
+  }
+  .contacts-list .item:nth-child(1) {
+    margin-bottom: 0;
+    margin-right: 30px;
+  }
+}
+
 .contacts-list .link {
   display: inline-block;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 500;
   font-style: normal;
-  line-height: 1.143;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: #757575;
   transition-property: color;
@@ -265,6 +327,22 @@ address {
   outline-color: #2196f3;
 }
 
+@media screen and (min-width: 768px) {
+  .contacts-list .link {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list .link {
+    font-size: 14px;
+    line-height: 1.143;
+  }
+}
+
 .contacts-list .mail-icon {
   width: 16px;
   height: 12px;
@@ -274,6 +352,12 @@ address {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-list .mail-icon {
+    margin-right: 8px;
+  }
 }
 
 .contacts-list .phone-icon {
@@ -825,8 +909,18 @@ address {
 @media screen and (min-width: 768px) {
   .header {
     margin: 0;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    border-bottom: 1px solid #ececec;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    margin: 0;
+    padding-top: 24px;
+    padding-bottom: 25px;
     text-align: center;
     border-bottom: 1px solid #ececec;
   }
@@ -834,18 +928,23 @@ address {
 
 @media screen and (min-width: 768px) {
   .header .container {
-    display: inline-flex;
+    display: flex;
     align-items: center;
+    justify-content: center;
   }
 }
 
-.menu-container {
+.header .menu-container {
   text-align: center;
   background-color: #fff;
 }
 
+.header .menu-container.is-open {
+  display: block;
+}
+
 @media screen and (max-width: 767px) {
-  .menu-container {
+  .header .menu-container {
     display: none;
     position: absolute;
     top: 100%;
@@ -856,16 +955,15 @@ address {
   }
 }
 
-.menu-container.is-open {
-  display: block;
-}
-
 @media screen and (min-width: 768px) {
-  .menu-container {
+  .header .menu-container {
     display: flex;
-    position: relative;
+    position: static;
     align-items: center;
     justify-content: space-between;
+    padding: 0;
+    margin-left: 88px;
+    background-color: transparent;
   }
 }
 
