--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,15 +3,20 @@
   margin-bottom: 0;
   font-family: "Raleway", "Oleo Script", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.268;
+  font-size: 24px;
+  line-height: 1.17;
   color: $black-text-color;
-}
 
-.logo:focus {
-  outline-color: $accent-color;
-}
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.268;
+  }
 
-.logo-blue {
-  color: $accent-color;
+  .logo:focus {
+    outline-color: $accent-color;
+  }
+
+  .logo-blue {
+    color: $accent-color;
+  }
 }
