--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,12 +1,13 @@
-.navigation {
-  @media screen and (min-width: 768px) {
-  }
-}
+// .navigation {
+//   // @media screen and (min-width: 768px) {
+//   // }
+// }
 
 .site-nav {
   display: flex;
   flex-direction: column;
   align-self: center;
+
   @media screen and (min-width: 768px) {
     flex-direction: row;
   }
@@ -21,47 +22,57 @@
       }
     }
   }
+}
 
-  .link {
-    display: inline-block;
-    position: relative;
+.link {
+  display: inline-block;
+  position: relative;
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: $title-text-color;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
+
+  @media screen and (min-width: 768px) {
     font-size: 14px;
-    font-weight: 500;
-    font-style: normal;
     line-height: 1.143;
-    letter-spacing: 0.02em;
-    color: $title-text-color;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
+  }
 
-    &::after {
-      content: "";
-      display: none;
-      position: absolute;
-      transform: translateY(-50%);
-      margin-top: 8px;
-      width: 100%;
-      height: 4px;
-      background-color: $accent-color;
-      border-radius: 2px;
-    }
-    &:hover::after,
-    &:focus::after,
-    &.current::after {
-      display: flex;
-      align-items: baseline;
-    }
+  &::after {
+    content: "";
+    display: none;
+    position: absolute;
+    transform: translateY(-50%);
+    margin-top: 8px;
+    width: 100%;
+    height: 4px;
+    background-color: $accent-color;
+    border-radius: 2px;
 
-    &:hover,
-    &:focus {
-      color: $accent-color;
-      outline-color: $accent-color;
+    @media screen and (min-width: 768px) {
+      margin-top: 31px;
+      transform: translateY(-100%);
     }
+  }
+  &:hover::after,
+  &:focus::after,
+  &.current::after {
+    display: flex;
+    align-items: baseline;
+  }
 
-    &.current {
-      color: $accent-color;
-    }
+  &:hover,
+  &:focus {
+    color: $accent-color;
+    outline-color: $accent-color;
+  }
+
+  &.current {
+    color: $accent-color;
   }
 }
