--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,18 +1,19 @@
 .header {
-  background-color: tomato;
   @media screen and (max-width: 480px) {
     position: relative;
     flex-direction: column;
     max-width: 480px;
     min-height: 60px;
   }
+
   @media screen and (min-width: 768px) {
     margin: 0;
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     text-align: center;
     border-bottom: 1px solid #ececec;
   }
+
   @media screen and (min-width: 1200px) {
     margin: 0;
     padding-top: 24px;
@@ -23,41 +24,38 @@
 
   .container {
     @media screen and (min-width: 768px) {
-      display: inline-flex;
+      display: flex;
       align-items: center;
+      justify-content: center;
     }
   }
 
-  .logo @media screen and (min-width: 768px) {
-    display: inline-block;
-    margin-right: 88px;
-  }
-}
+  .menu-container {
+    text-align: center;
+    background-color: #fff;
 
-.menu-container {
-  text-align: center;
-  background-color: #fff;
+    &.is-open {
+      display: block;
+    }
 
-  @media screen and (max-width: 767px) {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    width: 100%;
-  }
+    @media screen and (max-width: 767px) {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      padding-top: 60px;
+      padding-bottom: 60px;
+      width: 100%;
+    }
 
-  &.is-open {
-    display: block;
-  }
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-    position: static;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0;
-    width: auto;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      position: static;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0;
+      margin-left: 88px;
+      background-color: transparent;
+    }
   }
 }
