--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -28,6 +28,9 @@
       align-items: center;
       justify-content: center;
     }
+    @media screen and (min-width: 1200px) {
+      justify-content: space-between;
+    }
   }
 
   .menu-container {
