--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,6 @@ address {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
   }
 }
 
@@ -433,11 +432,16 @@ address {
   width: 100%;
   max-width: 450px;
   height: auto;
-  overflow-y: scroll;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   z-index: 105;
+}
+
+@media screen and (max-width: 1199px) {
+  .modal {
+    overflow-y: scroll;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1434,12 +1438,18 @@ address {
   padding-bottom: 94px;
 }
 
-.examples.list {
+@media screen and (min-width: 768px) {
+  .work-examples .container {
+    width: 768px;
+  }
+}
+
+.examples .list {
   margin: 0;
 }
 
 @media screen and (min-width: 768px) {
-  .examples.list {
+  .examples .list {
     margin-left: -30px;
     margin-top: -30px;
   }
@@ -1485,7 +1495,6 @@ address {
 .examples-title {
   margin-top: 0;
   margin-bottom: 4px;
-  width: 322px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -1495,7 +1504,6 @@ address {
 
 .examples .type {
   margin: 0;
-  width: 322px;
   font-size: 16px;
   line-height: 1.875;
   color: #757575;
