--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -31,12 +31,15 @@
   width: 100%;
   max-width: 450px;
   height: auto;
-  overflow-y: scroll;
   background: $white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   z-index: 105;
+
+  @media screen and (max-width: 1199px) {
+    overflow-y: scroll;
+  }
 
   @media screen and (min-width: 1200px) {
     max-width: 528px;
