--- a/sass/layouts/_examples.scss
+++ b/sass/layouts/_examples.scss
@@ -1,9 +1,18 @@
-.examples.list {
-  margin: 0;
+.work-examples {
+  .container {
+    @media screen and (min-width: 768px) {
+      width: 768px;
+    }
+  }
+}
 
-  @media screen and (min-width: 768px) {
-    margin-left: -30px;
-    margin-top: -30px;
+.examples {
+  .list {
+    margin: 0;
+    @media screen and (min-width: 768px) {
+      margin-left: -30px;
+      margin-top: -30px;
+    }
   }
 }
 
@@ -40,7 +49,6 @@
 .examples-title {
   margin-top: 0;
   margin-bottom: 4px;
-  width: 322px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -50,7 +58,6 @@
 
 .examples .type {
   margin: 0;
-  width: 322px;
   font-size: 16px;
   line-height: 1.875;
   color: $primary-text-color;
