--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,10 @@ body {
   color: #757575;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 h1,
 h2,
 h3 {
@@ -407,13 +411,13 @@ address {
   right: 0;
   bottom: 0;
   padding: 93px 15px;
-  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition-property: opacity;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
