--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,14 @@ address {
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .examples.list.flex {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
+}
+
 .logo {
   margin-top: 0;
   margin-bottom: 0;
