исправила ошибки от ментора

--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -93,7 +93,7 @@
 
 .adress-item .adress-link {
   line-height: 1.714;
-  color: var(--opacity-white-color);
+  color: $opacity-white-color;
 }
 
 .submit-container {
