--- a/css/main.css
+++ b/css/main.css
@@ -450,12 +450,6 @@ address {
   z-index: 105;
 }
 
-@media screen and (max-width: 1199px) {
-  .modal {
-    overflow-y: scroll;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .modal {
     max-width: 528px;
@@ -841,7 +835,13 @@ address {
 }
 
 .filters {
-  margin-bottom: 50px;
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .filters {
+    margin-bottom: 50px;
+  }
 }
 
 .filters-list {
@@ -922,9 +922,11 @@ address {
 @media screen and (max-width: 480px) {
   .header {
     position: relative;
+    z-index: 55;
     flex-direction: column;
     max-width: 480px;
     min-height: 60px;
+    border-bottom: 1px solid #ececec;
   }
 }
 
@@ -1429,7 +1431,7 @@ address {
 
 .adress-item .adress-link {
   line-height: 1.714;
-  color: var(--opacity-white-color);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .submit-container {
