--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -1,5 +1,8 @@
 .filters {
-  margin-bottom: 50px;
+  margin-bottom: 0;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 .filters-list {
   display: flex;
