--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -9,3 +9,4 @@ $secondary-accent-color: #f5f4fa;
 $dark-background-color: #2f303a;
 $border-color: #eeeeee;
 $icon-color: #afb1b8;
+$header-border: #ececec;
