--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+  outline: 1px solid sandybrown;
 }
 
 body {
@@ -108,6 +109,7 @@ address {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
+    justify-content: space-around;
   }
 }
 
@@ -388,10 +390,14 @@ address {
   transition-delay: 0;
 }
 
-.contacts-list:hover .mail-icon,
-.contacts-list:focus .mail-icon,
-.contacts-list:hover .phone-icon,
-.contacts-list:focus .phone-icon {
+.contacts-list.phone:hover .phone-icon,
+.contacts-list.phone:focus .phone-icon {
+  fill: #2196f3;
+  outline-color: #2196f3;
+}
+
+.contacts-list.mail:hover .mail-icon,
+.contacts-list.mail:focus .mail-icon {
   fill: #2196f3;
   outline-color: #2196f3;
 }
@@ -838,6 +844,18 @@ address {
   margin-bottom: 0;
 }
 
+@media screen and (max-width: 767px) {
+  .filters {
+    margin-bottom: -15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filters {
+    margin-bottom: 30px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .filters {
     margin-bottom: 50px;
@@ -919,13 +937,14 @@ address {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .header {
     position: relative;
     z-index: 55;
     flex-direction: column;
-    max-width: 480px;
+    max-width: 767px;
     min-height: 60px;
+    box-sizing: border-box;
     border-bottom: 1px solid #ececec;
   }
 }
@@ -979,9 +998,11 @@ address {
     position: absolute;
     top: 100%;
     left: 0;
+    right: 0;
     padding-top: 60px;
     padding-bottom: 60px;
     width: 100%;
+    border-top: 1px solid #ececec;
   }
 }
 
@@ -1452,18 +1473,19 @@ address {
   padding-bottom: 94px;
 }
 
-@media screen and (min-width: 768px) {
-  .work-examples .container {
-    width: 768px;
+.examples.list {
+  text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+  .examples.list {
+    margin-top: 40px;
+    text-align: center;
   }
 }
 
-.examples .list {
-  margin: 0;
-}
-
 @media screen and (min-width: 768px) {
-  .examples .list {
+  .examples.list {
     margin-left: -30px;
     margin-top: -30px;
   }
@@ -1471,9 +1493,10 @@ address {
 
 .examples-item {
   background: #ffffff;
+  display: inline-block;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) {
   .examples-item {
     margin-bottom: 30px;
   }
@@ -1509,6 +1532,7 @@ address {
 .examples-title {
   margin-top: 0;
   margin-bottom: 4px;
+  text-align: left;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -1518,6 +1542,7 @@ address {
 
 .examples .type {
   margin: 0;
+  text-align: left;
   font-size: 16px;
   line-height: 1.875;
   color: #757575;
@@ -1544,6 +1569,7 @@ address {
   transition-duration: 250ms, 500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
+  text-align: left;
   font-size: 18px;
   line-height: 1.56;
   font-weight: 400;
