--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -1,5 +1,11 @@
 .filters {
   margin-bottom: 0;
+  @media screen and (max-width: 767px) {
+    margin-bottom: -15px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
   @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
   }
