--- a/sass/layouts/_examples.scss
+++ b/sass/layouts/_examples.scss
@@ -1,14 +1,18 @@
-.work-examples {
-  .container {
-    @media screen and (min-width: 768px) {
-      width: 768px;
-    }
-  }
-}
+// .work-examples {
+//   .container {
+//     @media screen and (min-width: 768px) {
+//       min-width: 768px;
+//     }
+//   }
+// }
 
 .examples {
-  .list {
-    margin: 0;
+  &.list {
+    text-align: center;
+    @media screen and (max-width: 767px) {
+      margin-top: 40px;
+      text-align: center;
+    }
     @media screen and (min-width: 768px) {
       margin-left: -30px;
       margin-top: -30px;
@@ -18,7 +22,8 @@
 
 .examples-item {
   background: $white-color;
-  @media screen and (max-width: 767px) {
+  display: inline-block;
+  @media screen and (min-width: 767px) {
     margin-bottom: 30px;
   }
 
@@ -49,6 +54,7 @@
 .examples-title {
   margin-top: 0;
   margin-bottom: 4px;
+  text-align: left;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -58,6 +64,7 @@
 
 .examples .type {
   margin: 0;
+  text-align: left;
   font-size: 16px;
   line-height: 1.875;
   color: $primary-text-color;
@@ -86,6 +93,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
 
+  text-align: left;
   font-size: 18px;
   line-height: 1.56;
   font-weight: 400;
