--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,11 +1,12 @@
 .header {
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 767px) {
     position: relative;
     z-index: 55;
     flex-direction: column;
-    max-width: 480px;
+    max-width: 767px;
     min-height: 60px;
-    border-bottom: 1px solid #ececec;
+    box-sizing: border-box;
+    border-bottom: 1px solid $header-border;
   }
 
   @media screen and (min-width: 768px) {
@@ -13,7 +14,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
-    border-bottom: 1px solid #ececec;
+    border-bottom: 1px solid $header-border;
   }
 
   @media screen and (min-width: 1200px) {
@@ -21,7 +22,7 @@
     padding-top: 24px;
     padding-bottom: 25px;
     text-align: center;
-    border-bottom: 1px solid #ececec;
+    border-bottom: 1px solid $header-border;
   }
 
   .container {
@@ -48,9 +49,11 @@
       position: absolute;
       top: 100%;
       left: 0;
+      right: 0;
       padding-top: 60px;
       padding-bottom: 60px;
       width: 100%;
+      border-top: 1px solid #ececec;
     }
 
     @media screen and (min-width: 768px) {
