--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -8,7 +8,7 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
-  outline: 1px solid sandybrown;
+  // outline: 1px solid sandybrown;
 }
 
 body {
