--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,5 +1,7 @@
 .header {
   @media screen and (max-width: 767px) {
+    display: flex;
+    justify-content: center;
     position: relative;
     z-index: 55;
     flex-direction: column;
@@ -26,9 +28,13 @@
   }
 
   .container {
-    @media screen and (min-width: 768px) {
+    @media screen and (max-width: 767px) {
       display: flex;
       align-items: center;
+      justify-content: space-between;
+      width: 100%;
+    }
+    @media screen and (min-width: 768px) {
       justify-content: center;
     }
     @media screen and (min-width: 1200px) {
