--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,6 +6,7 @@
   font-size: 24px;
   line-height: 1.17;
   color: $black-text-color;
+  cursor: default;
 
   @media screen and (min-width: 1200px) {
     font-size: 26px;
