--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -53,6 +53,7 @@
   background-color: $white-color;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .close-icon {
