--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,7 +1,7 @@
 $black-text-color: #000000;
 $primary-text-color: #757575;
 $title-text-color: #212121;
-$accent-color: #2196f3;
+$accent-color: #c0014a;
 $white-color: #ffffff;
 $opacity-white-color: rgba(255, 255, 255, 0.6);
 $background-color: #e5e5e5;
